# game_of_life

./: .cproject  .project  .travis.yml  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md
headers/board/: Board.h  NormalBoard.h  SpecializedBoard.h
headers/data_type/: u_index.h
headers/printer/: PrettyPrint.h  ToConsole.h
settings/: GGG.txt  beacon.txt  blinker.txt  combination.txt  glider.txt  r-pentomio.txt
source/: GameOfLife.cpp  NormalBoard.cpp  SpecializedBoard.cpp  ToConsole.cpp
